1.02.23
Bugfix: Sometimes when paused, 'go' is unavailable.
Added pause message to play area for when 'go' is paused (instead of just when 'record' is paused.)

1.02.22 (11-29-2006)
Bugfix: when entering playback mode, floor track duplicated.
Bugfix: Record, pause, switch location, go should remain in the newly selected location.
        Now 'Go' doesn't initialize to the last-recorded-state before starting.
Bugfix: Pausing 'go' then pressing 'playback' should have 'slow' enabled.
Energy vs. Position graph 'copies' stay in front of the simulation frame.
Energy vs. Position graph changed text-labeled zoom buttons to magnifying glass icons.

1.02.21 (11-29-2006)
Removed the floor from outer space.
        Stretched outer-space graphic to fit screen without floor graphic.
Set color of ground to match location (i.e. earth is green, moon is gray).
The skater points his feet toward the closest track when the user is dragging him.
Changed "Friction>>" to "Track Friction>>" for the friction button.
Changed "Record Path" from a checkbox to a button.
"Record Path" was moved below the tool checkboxes.
Clear thermal when manipulating the skater.
        The energy dissipates in a smooth animation, not all at once.
Resetting the skater clears the thermal energy.
Changed "Hide Thermal" to "Show Thermal" for the pie chart controls.
Show Thermal is now default for pie chart.
Bugfix: The values for energy show up under the yellow record dots so you can't read the values.
Bugfix: Reset does not get rid of the tape measure if you have it out.
Bugfix: The potential Energy Reference line is Red but potential energy on the graphs is blue.

1.02.20 (11-15-2006)
Removed logo panel for users with screen height<=768 pixels.
Bugfix: after record and playback, the rocket graphic doesn't appear

1.02.19 (11-15-2006)
Bugfix: potential energy (pie chart) is wrong when PE=0 line makes PE negative
Made pie chart piece black for negative potential energy.
Bugfix: reset sometimes causes a crash.
